Closed Bug 15169 Opened 25 years ago Closed 25 years ago

Autofill item in Pref UI not needed anymore?

Categories

(Toolkit :: Form Manager, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: paulmac, Unassigned)

Details

The 'Enabling Prefill of Forms' pref in Pref UI doesn't seem relevant anymore,
with the new way of 'capturing' forms. You may still be using the pref it sets
for some logic, I don't know.

If you agree this should be taken out, you can just re-assign this to Matt.
Status: NEW → ASSIGNED
Target Milestone: M10
I agree with you that this should be taken out.  But before we can do so, there
is some very minor cleanup that needs to be done to wallet.cpp so that it no
longer tests for this pref.
Assignee: morse → matt
Status: ASSIGNED → NEW
I just checked in the minor cleanup to wallet.cpp.  So now it's up to matt to
remove the pref from the UI.  Reassigning.
Target Milestone: M10 → M11
I think we can get by without doing this for m10.
there are still many things in the pref ui not hooked up to work as expected.
this single change doesn't buy us a whole lot.
in m11 a good deal of clean up is coming.
matt is out on vacation.

i'd intertain other ideas but for now marking this m11.
Yes, we can live w/o this for m10.
Status: NEW → ASSIGNED
Need a code review

RCS file: /cvsroot/mozilla/xpfe/components/prefwindow/resources/content/pref-adv
anced.xul,v
retrieving revision 1.14
diff -r1.14 pref-advanced.xul
102,114d101
<                       <html:div>
<                       <html:label for="pref:string:wallet.Server" accesskey="c
" tabindex="0">
<                               &server.label;
<                       </html:label>
<                       <html:input name="Wallet Server:" type="text"   id="pref
:string:wallet.Server" size="25" />
<                       </html:div>
<                       <spring style="height:10px" />
<       </html:fieldset>
<     </box>
<
<
<       <box align="vertical" style="width: 100%;">
<       <html:fieldset style="width: 100%;">
If I'm reading this diff correctly, you are removing the wrong thing.  The item
to be removed is not the string specifying the server for the wallet tables.
Rather it is the checkbox for enabling prefilling of forms that should be
removed.

Also, it would be easier to code-review if you did a contect diff instead (i.e.,
use the -c options).
This was the diff i meant to give

C:\mozilla\xpfe\components\prefwindow\resources\content>cvs diff -c pref-advance
d.xul
Index: pref-advanced.xul
===================================================================
RCS file: /cvsroot/mozilla/xpfe/components/prefwindow/resources/content/pref-adv
anced.xul,v
retrieving revision 1.14
diff -c -r1.14 pref-advanced.xul
*** pref-advanced.xul   1999/10/01 20:48:52     1.14
--- pref-advanced.xul   1999/10/27 01:12:32
***************
*** 86,98 ****
                                        &remSignCheck.label;
                                </html:label>
                        </html:div>
-                       <html:div>
-                       <html:input type="checkbox" checked="true" id="pref:0:bo
ol:wallet.captureForms" />
-                               <html:label for="pref:0:bool:wallet.captureForms
" accesskey="c" tabindex="0">
-                                       &capFormsCheck.label;
-                               </html:label>
-                       </html:div>
-

        </html:fieldset>
        </box>
--- 86,91 ----
That looks better.  Consider it reviewed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
fixed
Status: RESOLVED → VERIFIED
veriifed, this is gone now
Assignee: matt → nobody
Product: Core → Toolkit
QA Contact: paulmac → form.manager
Target Milestone: M11 → ---
Version: Trunk → unspecified
You need to log in before you can comment on or make changes to this bug.