fix bugs 14672 (dead code in wallet) and part of bug 15169 (wallet pref not needed) -- reviewed pnunn